# lidar_ws

./: README.md  hokuyo_setup.sh
src/f1tenth_lidar/: CMakeLists.txt  package.xml
src/f1tenth_lidar/config/: clustering_params.yaml  lidar_clustering.rviz
src/f1tenth_lidar/f1tenth_lidar/: clustering_node.py
src/f1tenth_lidar/include/f1tenth_lidar/: urg_c_wrapper.hpp  urg_node.hpp
src/f1tenth_lidar/launch/: lidar_with_clustering.py
src/f1tenth_lidar/src/: get_id.cpp  urg_c_wrapper.cpp  urg_node.cpp
src/f1tenth_lidar/urdf/: hokuyo_standalone.urdf
