<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_lidar</name>
  <version>0.1.0</version>
  <description>F1Tenth Hokuyo LiDAR driver + DBSCAN clustering (all-in-one)</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ (urg_node driver) -->
  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>laser_proc</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosidl_default_generators</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urg_c</depend>
  <depend>urg_node_msgs</depend>

  <!-- Python (clustering node) -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Launch -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
